# python-package-with-embedded-rust-executiable

./: LICENSE  README.md  run.sh  setup.sh  ubuntu.sh
python/hello/: pyproject.toml
python/hello/src/hello/: __init__.py
rust/hello/: Cargo.toml  Cross.toml
