[project]
name = "hello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
dependencies = []

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "hello"
python-source = "src"
bindings = "bin"
manifest-path = "../../rust/hello/Cargo.toml"
compatibility = "linux"
skip-auditwheel = false

[[tool.maturin.targets]]
name="hello"