[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
async-channel = "2.3.1"
clap = "4.5.20"
colored = "2.1.0"
magika = "0.0.0"
num_cpus = "1.16.0"
ort = "2.0.0-rc.5"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = "1.40.0"

[[bin]]
name = "hello"
path = "src/main.rs"
